sense parametre
